%%{init: { 'theme': 'default', 'themeVariables': { 'fontSize': '18px', 'fontFamily': 'Arial' }}}%%
classDiagram
    %% Classe Parent (Regroupe les utilisateurs)
    class Utilisateur {
        +int id
        +string nom
        +string email
        +string motDePasse
        +gererUtilisateurs()
        +gererSessions()
        +importerCandidats()
        +consulterStats()
    }

    %% Héritage : Seul le Formateur a des attributs/méthodes métiers spécifiques différents
    class Formateur {
        +string codeInterne
        +string specialite
        +appelerSuivant()
        +terminerEntretien()
        +consulterFileAttente()
    }

    Utilisateur <|-- Formateur : hérite

    %% Gestion des Droits et Rôles (L'Admin sera une instance dans la table Role)
    class Role {
        +int id
        +string nom
    }

    class Permission {
        +int id
        +string nom
    }

    %% Entités Métier
    class Session {
        +int id
        +string nom
        +date dateEntretien
        +time heureDebut
        +time heureFin
        +int capaciteMax
        +string codePresence
        +string statut
        +calculerStatistiques()
    }

    class Candidat {
        +int id
        +string cin
        +string photo
        +string nom
        +string prenom
        +float scoreQCM
        +bool isPresent
    }

    class Ticket {
        +int id
        +string codeUnique
        +int numeroOrdre
        +string statut
        +datetime heureArrivee
    }

    class Notification {
        +int id
        +string titre
        +string message
        +datetime dateEnvoi
        +bool estLu
        +envoyer()
    }

    %% Relations
    Utilisateur "0..*" -- "1" Role : possède
    Role "1" -- "0..*" Permission : contient
    Utilisateur "1" -- "0..*" Session : gère
    
    %% Le Candidat reçoit des notifications
    Candidat "1" -- "0..*" Notification : reçoit

    Session "1" -- "0..*" Candidat : est assigné à
    Candidat "1" -- "0..1" Ticket : génère
    Session "1" *-- "0..*" Ticket : contient